# python-flask-server/swagger_server/models/boundary.py
@@ -1,7 +1,7 @@
 # coding: utf-8
 
 from __future__ import absolute_import
-from swagger_server.models.shape import Shape
+from swagger_server.models.rectangle import Rectangle
 from .base_model_ import Model
 from datetime import date, datetime
 from typing import List, Dict
@@ -13,15 +13,15 @@ class Boundary(Model):
     NOTE: This class is auto generated by the swagger code generator program.
     Do not edit the class manually.
     """
-    def __init__(self, boundary_info: Shape=None):
+    def __init__(self, boundary_info: Rectangle=None):
         """
         Boundary - a model defined in Swagger
 
         :param boundary_info: The boundary_info of this Boundary.
-        :type boundary_info: Shape
+        :type boundary_info: Rectangle
         """
         self.swagger_types = {
-            'boundary_info': Shape
+            'boundary_info': Rectangle
         }
 
         self.attribute_map = {
@@ -43,22 +43,22 @@ class Boundary(Model):
         return deserialize_model(dikt, cls)
 
     @property
-    def boundary_info(self) -> Shape:
+    def boundary_info(self) -> Rectangle:
         """
         Gets the boundary_info of this Boundary.
 
         :return: The boundary_info of this Boundary.
-        :rtype: Shape
+        :rtype: Rectangle
         """
         return self._boundary_info
 
     @boundary_info.setter
-    def boundary_info(self, boundary_info: Shape):
+    def boundary_info(self, boundary_info: Rectangle):
         """
         Sets the boundary_info of this Boundary.
 
         :param boundary_info: The boundary_info of this Boundary.
-        :type boundary_info: Shape
+        :type boundary_info: Rectangle
         """
         if boundary_info is None:
             raise ValueError("Invalid value for `boundary_info`, must not be `None`")
