# python-flask-server/swagger_server/models/shape.py
@@ -1,102 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from swagger_server.models.coordinate import Coordinate
-from .base_model_ import Model
-from datetime import date, datetime
-from typing import List, Dict
-from ..util import deserialize_model
-import re
-
-
-class Shape(Model):
-    """
-    NOTE: This class is auto generated by the swagger code generator program.
-    Do not edit the class manually.
-    """
-    def __init__(self, coordinates: List[Coordinate]=None, name: str='rectangle'):
-        """
-        Shape - a model defined in Swagger
-
-        :param coordinates: The coordinates of this Shape.
-        :type coordinates: List[Coordinate]
-        :param name: The name of this Shape.
-        :type name: str
-        """
-        self.swagger_types = {
-            'coordinates': List[Coordinate],
-            'name': str
-        }
-
-        self.attribute_map = {
-            'coordinates': 'coordinates',
-            'name': 'name'
-        }
-
-        self._name = name
-        self._coordinates = coordinates
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'Shape':
-        """
-        Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The Shape of this Shape.
-        :rtype: Shape
-        """
-        return deserialize_model(dikt, cls)
-
-    @property
-    def coordinates(self) -> List[Coordinate]:
-        """
-        Gets the coordinates of this Shape.
-
-        :return: The coordinates of this Shape.
-        :rtype: List[Coordinate]
-        """
-        return self._coordinates
-
-    @coordinates.setter
-    def coordinates(self, coordinates: List[Coordinate]):
-        """
-        Sets the coordinates of this Shape.
-
-        :param coordinates: The coordinates of this Shape.
-        :type coordinates: List[Coordinate]
-        """
-
-        if ((((coordinates is not None) and (len(coordinates) != 4)) and (re.search('^rectangle$', self.name)))):
-            raise ValueError("Invalid number of coordinates: Rectangle must be 4 coordinates")
-        if ((((coordinates is not None) and (len(coordinates) != 3)) and (re.search('^triangle$', self.name)))):
-            raise ValueError("Invalid number of coordinates: Triangle must be 3 coordinates")
-        if ((((coordinates is not None) and (len(coordinates) < 1)) and (re.search('^polygon$', self.name)))):
-            raise ValueError("Invalid number of coordinates: Polygon must be at least 1 coordinate")
-        self._coordinates = coordinates
-
-    @property
-    def name(self) -> str:
-        """
-        Gets the name of this Shape.
-
-        :return: The name of this Shape.
-        :rtype: str
-        """
-        return self._name
-
-    @name.setter
-    def name(self, name: str):
-        """
-        Sets the name of this Shape.
-
-        :param name: The name of this Shape.
-        :type name: str
-        """
-        if name is None:
-            raise ValueError("Rectangle requires a string name `rectangle`")
-        if not re.search('^rectangle$', name) and not re.search('^triangle$', name) and not re.search('^polygon$', name):
-            raise ValueError("Invalid value for `name`, must be either `rectangle`, `triangle`, or `polygon`")
-
-        self._name = name
-
